# .aw_watcher_pipeline_stage

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION_REVIEW.md  LICENSE  MAINTAINABILITY.md  MANIFEST.in  PERFORMANCE.md  PR_DESCRIPTION.md  README.md  RELEASE_NOTES.md  RELEASE_PREP.md  SECURITY_AUDIT.md  TESTING.md  development_pipeline_ActivityWatch_fork.md  gemini_clock.md  pyproject.toml  setup.py  stage0RFI.md
.github/workflows/: python-test.yml
aw_watcher_pipeline_stage/: LICENSE  __init__.py  __main__.py  client.py  config.py  main.py  manual_test.py  test_edge_cases.py  watcher.py
tests/: conftest.py  run_validation.py  test_all_robustness.py  test_client.py  test_config.py  test_config_flow.py  test_final_robustness.py  test_integration.py  test_main.py  test_manual_smoke_repro.py  test_memory.py  test_performance.py  test_robustness.py  test_stability.py  test_watcher.py
